[package]
name = "fungible-token-wrapper"
version = "0.0.1"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[dev-dependencies]
anyhow = "1.0.44"
near-primitives = "0.5.0"
near-sdk = "4.0.0-pre.7"
near-units = "0.2.0"
serde_json = "1.0.68"
tokio = { version = "1.16.1", features = ["full"] }
workspaces = "0.1.1"

# remember to include a line for each contract
fungible-token = { path = "./ft" }
defi = { path = "./test-contract-defi" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "ft",
  "test-contract-defi",
]
